# test_saucedemo

./: .dockerignore  .env  .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  for_ai_reviewer  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  pr_notifications.yml
core/: config.py  driver_factory.py
locators/: login_page.py  product_details_page.py  products_page.py
pages/: base_page.py  login_page.py  product_details_page.py  products_page.py
scripts/: telegram_notify.py
tests/: test_login_page.py
tests/data/: login_data.py  test_login_page.py
tests/login_page/: test_login_page.py
tests/login_page/data/: credentials.py
tests/products_page/: test_footer.py  test_product_page.py  test_products_page.py  test_sidebar.py
