[project]
name = "test-saucedemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "allure-pytest>=2.16.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "selenium>=4.44.0",
    "webdriver-manager>=4.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
